resolved that free equity, text wrap issue

--- a/styles.css
+++ b/styles.css
@@ -427,6 +427,7 @@ button {
 .pricing-box:nth-child(2) p {
     width: auto;
     -webkit-font-smoothing: antialiased;
+    white-space: nowrap;
 }
 
 .container .pricing-col .seven .pricing-box:nth-child(3) p {
